test/blackbox-test/test-cases/pid_reference_conflict_error.expected
test-cases/pid_reference_conflict_error.erl:6: Type error: type mismatch;
  found   : reference()
  required: pid()
there is no solution that satisfies subtype constraints
